se trabaja en nosotras.html

--- a/faqs.html
+++ b/faqs.html
@@ -13,7 +13,7 @@
       crossorigin="anonymous"
     />
     <!--Aos animate-->
-    <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
+    <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet" />
     <!--Mi CSS-->
     <link rel="stylesheet" href="style/css/styles.css" />
     <!--Google fonts-->
@@ -78,7 +78,11 @@
     <section class="nosotros">
       <div class="container py-5">
         <div class="row justify-content-center scroll__faqs">
-          <div class="col-12 text-center py-5" data-aos="zoom-in-up" data-aos-duration="1000">
+          <div
+            class="col-12 text-center py-5"
+            data-aos="zoom-in-up"
+            data-aos-duration="1000"
+          >
             <h2 class="subtitulo"><span>Devoluciones</span></h2>
             <h3 class="titulo">Políticas de Devoluciones</h3>
             <p>
@@ -91,7 +95,11 @@
               tempora aut?
             </p>
           </div>
-          <div class="col-12 text-center py-5" data-aos="zoom-in-up" data-aos-duration="1000">
+          <div
+            class="col-12 text-center py-5"
+            data-aos="zoom-in-up"
+            data-aos-duration="1000"
+          >
             <h2 class="subtitulo"><span>Políticas de cambio</span></h2>
             <h3 class="titulo">Para realizar cambios</h3>
             <p>
@@ -104,7 +112,11 @@
               tempora aut?
             </p>
           </div>
-          <div class="col-12 text-center py-5" data-aos="zoom-in-up" data-aos-duration="1000">
+          <div
+            class="col-12 text-center py-5"
+            data-aos="zoom-in-up"
+            data-aos-duration="1000"
+          >
             <h2 class="subtitulo"><span>¿Como comprar?</span></h2>
             <h3 class="titulo">Podes comprar</h3>
             <p>
@@ -117,7 +129,11 @@
               tempora aut?
             </p>
           </div>
-          <div class="col-12 text-center py-5"data-aos="zoom-in-up" data-aos-duration="1000">
+          <div
+            class="col-12 text-center py-5"
+            data-aos="zoom-in-up"
+            data-aos-duration="1000"
+          >
             <h2 class="subtitulo"><span>Formas de pago</span></h2>
             <h3 class="titulo">Trabajamos con estos medios de pagos</h3>
             <p>
@@ -130,22 +146,13 @@
               tempora aut?
             </p>
           </div>
-          <div class="col-12 text-center py-5"data-aos="zoom-in-up" data-aos-duration="1000">
+          <div
+            class="col-12 text-center py-5"
+            data-aos="zoom-in-up"
+            data-aos-duration="1000"
+          >
             <h2 class="subtitulo"><span>Costos de Envío</span></h2>
             <h3 class="titulo">Trabajamos con</h3>
-            <p>
-              Lorem ipsum dolor sit amet consectetur adipisicing elit. Velit nam
-              error laborum ipsum. Nesciunt blanditiis illum necessitatibus
-              fugiat, laudantium cumque ratione veritatis ipsam dolorem nemo
-              excepturi laborum quod. Doloremque in ad voluptate similique quasi
-              eaque quisquam consequatur repudiandae, saepe, magni, molestias
-              neque sapiente dolores corporis recusandae distinctio dolore
-              tempora aut?
-            </p>
-          </div>
-          <div class="col-12 text-center py-5"data-aos="zoom-in-up" data-aos-duration="1000">
-            <h2 class="subtitulo"><span>¿Quienes somos?</span></h2>
-            <h3 class="titulo">Soy Camila</h3>
             <p>
               Lorem ipsum dolor sit amet consectetur adipisicing elit. Velit nam
               error laborum ipsum. Nesciunt blanditiis illum necessitatibus
@@ -260,21 +267,21 @@
         </div>
       </div>
     </footer>
-   <!--Aos animate-->
-   <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
-   <script>
-     AOS.init();
-   </script>
-   <!--Bootstrap-->
-   <script
-     src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.0/dist/js/bootstrap.bundle.min.js"
-     integrity="sha384-U1DAWAznBHeqEIlVSCgzq+c9gqGAJn5c/t99JyeKa9xxaYpSvHU5awsuZVVFIhvj"
-     crossorigin="anonymous"
-   ></script>
-   <!--Font Awesome-->
-   <script
-     src="https://kit.fontawesome.com/7d4193cf05.js"
-     crossorigin="anonymous"
-   ></script>
+    <!--Aos animate-->
+    <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
+    <script>
+      AOS.init();
+    </script>
+    <!--Bootstrap-->
+    <script
+      src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.0/dist/js/bootstrap.bundle.min.js"
+      integrity="sha384-U1DAWAznBHeqEIlVSCgzq+c9gqGAJn5c/t99JyeKa9xxaYpSvHU5awsuZVVFIhvj"
+      crossorigin="anonymous"
+    ></script>
+    <!--Font Awesome-->
+    <script
+      src="https://kit.fontawesome.com/7d4193cf05.js"
+      crossorigin="anonymous"
+    ></script>
   </body>
 </html>
