--- a/nosotras.html
+++ b/nosotras.html
@@ -33,8 +33,7 @@
 
   <body>
     <header>
-      <nav
-        class="navbar navbar-expand-lg">
+      <nav class="navbar navbar-expand-lg">
         <div class="container">
           <a class="navbar-brand fs-1" href="index.html">Bohemias</a>
           <button
@@ -77,141 +76,223 @@
       </nav>
     </header>
     <main>
-      <h1 class="text-center py-5">Conoce nuestra historia</h1>
-      <section class="nosotras text-center">        
-        <div class="container d-flex justify-content-center">
-          <div class="row">            
-              <div class="col-lg-6 nosotras__uno text-center">
-                <h2>Lorem, ipsum.</h2>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Mollitia tenetur ad quod aliquam quia harum hic deleniti consequatur accusantium. Sed.</p>
+      <h1 class="text-center py-5">
+        CONOCÉ
+        <span
+          data-aos="zoom-in-up"
+          data-aos-duration="3000"
+          class="nosotras__titulo"
+        >
+          NUESTRA HISTORIA</span
+        >
+      </h1>
+      <section class="nosotras">
+        <div class="container">
+          <div class="row">
+            <div class="col-lg-12 d-lg-flex">
+              <div class="col-lg-6">
+                <img
+                  class="img-fluid"
+                  src="img/Nosotras/nosotras1.png"
+                  alt=""
+                />
               </div>
-              <div class="col-lg-6 nosotras__dos">
-                <h2>Lorem, ipsum.</h2>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Mollitia tenetur ad quod aliquam quia harum hic deleniti consequatur accusantium. Sed.</p>
+              <div class="col-lg-6">
+                <h2>¿COMO EMPEZÓ TODO?</h2>
+                <p data-aos="zoom-in-down" data-aos-duration="1000">
+                  Lorem ipsum dolor sit, amet consectetur adipisicing elit.
+                  Sapiente, eum. Adipisci delectus laboriosam quod! Repudiandae
+                  doloremque saepe aut ullam excepturi est repellat quam itaque
+                  fugiat dicta blanditiis maxime reprehenderit quis libero, odit
+                  autem iste impedit voluptatum sint vero amet temporibus minus
+                  ipsa animi. Quibusdam id amet maxime sed iure consequatur
+                  iusto at cupiditate reiciendis nam quas, maiores nostrum sit
+                  animi inventore sequi numquam dolores? Quis iure illo
+                  eligendi, aliquam quos rerum voluptatem. Minus ex optio
+                  repudiandae pariatur, nobis magnam earum voluptate incidunt
+                  nostrum laudantium ipsa illum? Vero velit itaque et
+                  repellendus, expedita, est accusamus beatae odit iste hic,
+                  possimus necessitatibus?
+                </p>
               </div>
-              <div class="col-lg-6 nosotras__tres">
-                <h2>Lorem, ipsum.</h2>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Mollitia tenetur ad quod aliquam quia harum hic deleniti consequatur accusantium. Sed.</p>
-              </div>              
+            </div>
+          </div>
+          <div class="row">
+            <div class="col-lg-12 d-lg-flex">
+              <div class="col-lg-6">
+                <img
+                  class="img-fluid"
+                  src="img/Nosotras/nosotras2.png"
+                  alt=""
+                />
+              </div>
+              <div class="col-lg-6">
+                <h2>¿QUIEN SOY?</h2>
+                <p data-aos="zoom-in-down" data-aos-duration="1000">
+                  Lorem ipsum dolor sit amet consectetur adipisicing elit. Velit
+                  maiores fugit, quaerat quae error iure debitis nesciunt, esse
+                  laboriosam provident quos? Modi unde nam vel eveniet natus
+                  nihil atque, minus iure ex quis quasi saepe deleniti accusamus
+                  quae earum? Tenetur omnis alias placeat, quibusdam
+                  perspiciatis consequatur nemo similique saepe velit blanditiis
+                  commodi libero accusantium totam vel, suscipit optio sequi
+                  aspernatur odit eius. Quo reprehenderit tenetur, modi
+                  voluptatum voluptate esse adipisci corporis maiores eius
+                  officiis. Molestias modi expedita, harum, incidunt deleniti
+                  similique minus dignissimos magnam, dolores eveniet quam ab
+                  corporis ullam? Eligendi porro perferendis id obcaecati
+                  voluptatum tempora dolorem facilis quia?
+                </p>
+              </div>
+            </div>
+          </div>
+          <div class="row">
+            <div class="col-lg-12 d-lg-flex">
+              <div class="col-lg-6">
+                <img
+                  class="img-fluid"
+                  src="img/Nosotras/nosotras3.png"
+                  alt=""
+                />
+              </div>
+              <div class="col-lg-6">
+                <h2>SHOWROOM</h2>
+                <p data-aos="zoom-in-down" data-aos-duration="1000">
+                  Lorem ipsum dolor sit amet consectetur adipisicing elit. Sed
+                  esse delectus, neque reiciendis, earum velit fugit modi magnam
+                  vero dicta in tenetur ratione quos saepe voluptatum ad!
+                  Aspernatur cumque odio adipisci id corrupti autem aut hic sit
+                  laboriosam ut neque optio, vel debitis qui quos magni! Ut
+                  facilis commodi adipisci deleniti, voluptas error perferendis!
+                  Consequuntur pariatur aperiam aliquam nobis consectetur.
+                  Praesentium qui eius vero dolores voluptatum voluptatem iure
+                  eligendi? Dolorem animi magni voluptas autem blanditiis vitae
+                  ratione fugit corporis officia nobis placeat repellat
+                  perferendis nostrum quidem, voluptatibus dignissimos quia
+                  expedita facilis. Voluptas exercitationem ratione repudiandae
+                  deserunt voluptatibus dolorem hic! Animi?
+                </p>
+              </div>
+            </div>
           </div>
         </div>
       </section>
     </main>
-        <!--Footer-->
-        <footer class="footer">
-          <div class="container py-5">
+    <!--Footer-->
+    <footer class="footer">
+      <div class="container py-5">
+        <div class="row">
+          <div class="col-lg-9 m-auto text-center">
+            <h1>Recibí nuestras promociones</h1>
+            <input
+              type="email"
+              name="email"
+              id="email"
+              placeholder="Ingresá tu email"
+            />
+            <button class="btn1">Suscribir!</button>
+          </div>
+        </div>
+        <div class="row">
+          <div class="col-lg-11 m-auto py-5">
             <div class="row">
-              <div class="col-lg-9 m-auto text-center">
-                <h1>Recibí nuestras promociones</h1>
-                <input
-                  type="email"
-                  name="email"
-                  id="email"
-                  placeholder="Ingresá tu email"
-                />
-                <button class="btn1">Suscribir!</button>
+              <div class="col-lg-3 py-3">
+                <h5 class="pb-3">Quick Links</h5>
+                <ul class="footer__quickLinks m-0 p-0">
+                  <li>
+                    <a class="footer__quickLinks__a" href="faqs.html"
+                      >Preguntas frecuentes</a
+                    >
+                  </li>
+                  <li>
+                    <a class="footer__quickLinks__a" href="faqs.html"
+                      >Politicas de cambio</a
+                    >
+                  </li>
+                  <li>
+                    <a class="footer__quickLinks__a" href="faqs.html"
+                      >Cómo comprar</a
+                    >
+                  </li>
+                </ul>
               </div>
-            </div>
-            <div class="row">
-              <div class="col-lg-11 m-auto py-5">
-                <div class="row">
-                  <div class="col-lg-3 py-3">
-                    <h5 class="pb-3">Quick Links</h5>
-                    <ul class="footer__quickLinks m-0 p-0">
-                      <li>
-                        <a class="footer__quickLinks__a" href="faqs.html"
-                          >Preguntas frecuentes</a
-                        >
-                      </li>
-                      <li>
-                        <a class="footer__quickLinks__a" href="faqs.html"
-                          >Politicas de cambio</a
-                        >
-                      </li>
-                      <li>
-                        <a class="footer__quickLinks__a" href="faqs.html"
-                          >Cómo comprar</a
-                        >
-                      </li>
-                    </ul>
-                  </div>
-                  <div class="col-lg-3 py-3">
-                    <h5 class="pb-3">Ayuda</h5>
-                    <ul class="footer__quickLinks m-0 p-0">
-                      <li>
-                        <a class="footer__quickLinks__a" href="faqs.html"
-                          >Devoluciones</a
-                        >
-                      </li>
-                      <li>
-                        <a class="footer__quickLinks__a" href="faqs.html"
-                          >Formas de pago</a
-                        >
-                      </li>
-                      <li>
-                        <a class="footer__quickLinks__a" href="faqs.html"
-                          >Costos de envío</a
-                        >
-                      </li>
-                    </ul>
-                  </div>
-                  <div class="col-lg-3 py-3">
-                    <h5 class="pb-3">Nosotros</h5>
-                    <ul class="footer__quickLinks m-0 p-0">
-                      <li>
-                        <a class="footer__quickLinks__a" href="faqs.html"
-                          >Quienes somos</a
-                        >
-                      </li>
-                      <li>
-                        <a class="footer__quickLinks__a" href="faqs.html"
-                          >Contacto</a
-                        >
-                      </li>
-                      <li>
-                        <a class="footer__quickLinks__a" href="faqs.html"
-                          >Visitanos</a
-                        >
-                      </li>
-                    </ul>
-                  </div>
-                  <div class="col-lg-3 py-3">
-                    <h5 class="pb-3">Redes</h5>
-                    <ul class="footer__quickLinks m-0 p-0">
-                      <span>
-                        <a href="https://www.facebook.com/bohemiias" target="_blank"
-                          ><i class="footer__quickLinks__redes fab fa-facebook"></i
-                        ></a>
-                      </span>
-                      <span>
-                        <a
-                          href="https://www.instagram.com/bohemiias_/"
-                          target="_blank"
-                          ><i class="footer__quickLinks__redes fab fa-instagram"></i
-                        ></a>
-                      </span>
-                    </ul>
-                  </div>
-                </div>
+              <div class="col-lg-3 py-3">
+                <h5 class="pb-3">Ayuda</h5>
+                <ul class="footer__quickLinks m-0 p-0">
+                  <li>
+                    <a class="footer__quickLinks__a" href="faqs.html"
+                      >Devoluciones</a
+                    >
+                  </li>
+                  <li>
+                    <a class="footer__quickLinks__a" href="faqs.html"
+                      >Formas de pago</a
+                    >
+                  </li>
+                  <li>
+                    <a class="footer__quickLinks__a" href="faqs.html"
+                      >Costos de envío</a
+                    >
+                  </li>
+                </ul>
+              </div>
+              <div class="col-lg-3 py-3">
+                <h5 class="pb-3">Nosotros</h5>
+                <ul class="footer__quickLinks m-0 p-0">
+                  <li>
+                    <a class="footer__quickLinks__a" href="faqs.html"
+                      >Quienes somos</a
+                    >
+                  </li>
+                  <li>
+                    <a class="footer__quickLinks__a" href="faqs.html"
+                      >Contacto</a
+                    >
+                  </li>
+                  <li>
+                    <a class="footer__quickLinks__a" href="faqs.html"
+                      >Visitanos</a
+                    >
+                  </li>
+                </ul>
+              </div>
+              <div class="col-lg-3 py-3">
+                <h5 class="pb-3">Redes</h5>
+                <ul class="footer__quickLinks m-0 p-0">
+                  <span>
+                    <a href="https://www.facebook.com/bohemiias" target="_blank"
+                      ><i class="footer__quickLinks__redes fab fa-facebook"></i
+                    ></a>
+                  </span>
+                  <span>
+                    <a
+                      href="https://www.instagram.com/bohemiias_/"
+                      target="_blank"
+                      ><i class="footer__quickLinks__redes fab fa-instagram"></i
+                    ></a>
+                  </span>
+                </ul>
               </div>
             </div>
           </div>
-        </footer>
-        <!--Aos animate-->
-        <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
-        <script>
-          AOS.init();
-        </script>
-        <!--Bootstrap-->
-        <script
-          src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.0/dist/js/bootstrap.bundle.min.js"
-          integrity="sha384-U1DAWAznBHeqEIlVSCgzq+c9gqGAJn5c/t99JyeKa9xxaYpSvHU5awsuZVVFIhvj"
-          crossorigin="anonymous"
-        ></script>
-        <!--Font Awesome-->
-        <script
-          src="https://kit.fontawesome.com/7d4193cf05.js"
-          crossorigin="anonymous"
-        ></script>
-      </body>
-    </html>
+        </div>
+      </div>
+    </footer>
+    <!--Aos animate-->
+    <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
+    <script>
+      AOS.init();
+    </script>
+    <!--Bootstrap-->
+    <script
+      src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.0/dist/js/bootstrap.bundle.min.js"
+      integrity="sha384-U1DAWAznBHeqEIlVSCgzq+c9gqGAJn5c/t99JyeKa9xxaYpSvHU5awsuZVVFIhvj"
+      crossorigin="anonymous"
+    ></script>
+    <!--Font Awesome-->
+    <script
+      src="https://kit.fontawesome.com/7d4193cf05.js"
+      crossorigin="anonymous"
+    ></script>
+  </body>
+</html>
