Se agrega delay en p-nosotras

--- a/nosotras.html
+++ b/nosotras.html
@@ -99,7 +99,7 @@
               </div>
               <div class="col-lg-6">
                 <h2>¿COMO EMPEZÓ TODO?</h2>
-                <p data-aos="zoom-in-down" data-aos-duration="1000">
+                <p data-aos="zoom-in-down" data-aos-delay="600" data-aos-duration="1000">
                   Lorem ipsum dolor sit, amet consectetur adipisicing elit.
                   Sapiente, eum. Adipisci delectus laboriosam quod! Repudiandae
                   doloremque saepe aut ullam excepturi est repellat quam itaque
@@ -293,6 +293,6 @@
     <script
       src="https://kit.fontawesome.com/7d4193cf05.js"
       crossorigin="anonymous"
-    ></script>
+    ></script>    
   </body>
 </html>
