Se agrega libreria TILT para efecto section criticas del index

--- a/index.html
+++ b/index.html
@@ -273,7 +273,7 @@
         <div class="container py-5 text-white text-center">
           <div class="row p-y3">
             <div class="col-lg-9 mx-auto">
-              <h1 class="visitanos__titulo">Visitanos</h1>
+              <h1 class="visitanos__titulo">VISITANOS</h1>
               <p class="visitanos__subtitulo py-3">
                 Vení a visitarnos a nuestro Showroom
               </p>
@@ -322,12 +322,9 @@
           Nuestras <span>Clientas</span>
         </h1>
         <div
-          class="criticas__contenedor"
-          data-aos="flip-left"
-          data-aos-easing="ease-out-cubic"
-          data-aos-duration="2000"
+          class="criticas__contenedor"       
         >
-          <div class="criticas__contenedor__ind">
+          <div class="criticas__contenedor__ind" data-tilt data-tilt-reverse="true">
             <div class="criticas__contenedor__estrellas">
               <i class="fas fa-star"></i>
               <i class="fas fa-star"></i>
@@ -350,7 +347,7 @@
             </div>
             <span class="criticas__contenedor__icono fas fa-quote-right"></span>
           </div>
-          <div class="criticas__contenedor__ind">
+          <div class="criticas__contenedor__ind" data-tilt data-tilt-reverse="true">
             <div class="criticas__contenedor__estrellas">
               <i class="fas fa-star"></i>
               <i class="fas fa-star"></i>
@@ -373,7 +370,7 @@
             </div>
             <span class="criticas__contenedor__icono fas fa-quote-right"></span>
           </div>
-          <div class="criticas__contenedor__ind">
+          <div class="criticas__contenedor__ind" data-tilt data-tilt-reverse="true">
             <div class="criticas__contenedor__estrellas">
               <i class="fas fa-star"></i>
               <i class="fas fa-star"></i>
@@ -576,5 +573,7 @@
       src="https://kit.fontawesome.com/7d4193cf05.js"
       crossorigin="anonymous"
     ></script>
+    <!--Vanilla tilt-->
+    <script type="text/javascript" src="js/vanilla-tilt.js"></script>
   </body>
 </html>
