Se modifica tamaño de img seccion criticas

--- a/index.html
+++ b/index.html
@@ -339,7 +339,7 @@
               </p>
             </div>
             <div class="criticas__contenedor__foto">
-              <img src="img/Iconos/pic-1.png" alt="img de una persona" />
+              <img src="img/Iconos/pic-1.jpg" alt="img de una persona" />
               <div>
                 <h3>Camila</h3>
                 <span>Viví Bohemias</span>
@@ -362,7 +362,7 @@
               </p>
             </div>
             <div class="criticas__contenedor__foto">
-              <img src="img/Iconos/pic-2.png" alt="img de una persona" />
+              <img src="img/Iconos/pic-2.jpg" alt="img de una persona" />
               <div>
                 <h3>Lucia</h3>
                 <span>Viví Bohemias</span>
@@ -385,7 +385,7 @@
               </p>
             </div>
             <div class="criticas__contenedor__foto">
-              <img src="img/Iconos/pic-3.png" alt="img de una persona" />
+              <img src="img/Iconos/pic-3.jpg" alt="img de una persona" />
               <div>
                 <h3>Liliana</h3>
                 <span>Viví Bohemias</span>
