Se agrega SEO y etiquetas MAIN.

--- a/faqs.html
+++ b/faqs.html
@@ -4,6 +4,14 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta
+      name="description"
+      content="Ecommerce de Bohemias, sección preguntas frecuentes"
+    />
+    <meta
+      name="keywords"
+      content="Ecommerce, Bohemias, Faqs, Preguntas frecuentes, Cambios, Devoluciones"
+    />
     <title>Bohemias Store</title>
     <!--Bootstrap-->
     <link
@@ -34,7 +42,7 @@
     <header>
       <nav class="navbar navbar-expand-lg">
         <div class="container">
-          <a class="navbar-brand fs-1" href="index.html">Bohemias</a>
+          <h1><a class="navbar-brand fs-1" href="index.html">Bohemias</a></h1>
           <button
             class="navbar-toggler"
             type="button"
@@ -75,104 +83,106 @@
       </nav>
     </header>
 
-    <section class="nosotros">
-      <div class="container py-5">
-        <div class="row justify-content-center scroll__faqs">
-          <div
-            class="col-12 text-center py-5"
-            data-aos="zoom-in-up"
-            data-aos-duration="1000"
-          >
-            <h2 class="subtitulo"><span>Devoluciones</span></h2>
-            <h3 class="titulo">Políticas de Devoluciones</h3>
-            <p>
-              Lorem ipsum dolor sit amet consectetur adipisicing elit. Velit nam
-              error laborum ipsum. Nesciunt blanditiis illum necessitatibus
-              fugiat, laudantium cumque ratione veritatis ipsam dolorem nemo
-              excepturi laborum quod. Doloremque in ad voluptate similique quasi
-              eaque quisquam consequatur repudiandae, saepe, magni, molestias
-              neque sapiente dolores corporis recusandae distinctio dolore
-              tempora aut?
-            </p>
-          </div>
-          <div
-            class="col-12 text-center py-5"
-            data-aos="zoom-in-up"
-            data-aos-duration="1000"
-          >
-            <h2 class="subtitulo"><span>Políticas de cambio</span></h2>
-            <h3 class="titulo">Para realizar cambios</h3>
-            <p>
-              Lorem ipsum dolor sit amet consectetur adipisicing elit. Velit nam
-              error laborum ipsum. Nesciunt blanditiis illum necessitatibus
-              fugiat, laudantium cumque ratione veritatis ipsam dolorem nemo
-              excepturi laborum quod. Doloremque in ad voluptate similique quasi
-              eaque quisquam consequatur repudiandae, saepe, magni, molestias
-              neque sapiente dolores corporis recusandae distinctio dolore
-              tempora aut?
-            </p>
-          </div>
-          <div
-            class="col-12 text-center py-5"
-            data-aos="zoom-in-up"
-            data-aos-duration="1000"
-          >
-            <h2 class="subtitulo"><span>¿Como comprar?</span></h2>
-            <h3 class="titulo">Podes comprar</h3>
-            <p>
-              Lorem ipsum dolor sit amet consectetur adipisicing elit. Velit nam
-              error laborum ipsum. Nesciunt blanditiis illum necessitatibus
-              fugiat, laudantium cumque ratione veritatis ipsam dolorem nemo
-              excepturi laborum quod. Doloremque in ad voluptate similique quasi
-              eaque quisquam consequatur repudiandae, saepe, magni, molestias
-              neque sapiente dolores corporis recusandae distinctio dolore
-              tempora aut?
-            </p>
-          </div>
-          <div
-            class="col-12 text-center py-5"
-            data-aos="zoom-in-up"
-            data-aos-duration="1000"
-          >
-            <h2 class="subtitulo"><span>Formas de pago</span></h2>
-            <h3 class="titulo">Trabajamos con estos medios de pagos</h3>
-            <p>
-              Lorem ipsum dolor sit amet consectetur adipisicing elit. Velit nam
-              error laborum ipsum. Nesciunt blanditiis illum necessitatibus
-              fugiat, laudantium cumque ratione veritatis ipsam dolorem nemo
-              excepturi laborum quod. Doloremque in ad voluptate similique quasi
-              eaque quisquam consequatur repudiandae, saepe, magni, molestias
-              neque sapiente dolores corporis recusandae distinctio dolore
-              tempora aut?
-            </p>
-          </div>
-          <div
-            class="col-12 text-center py-5"
-            data-aos="zoom-in-up"
-            data-aos-duration="1000"
-          >
-            <h2 class="subtitulo"><span>Costos de Envío</span></h2>
-            <h3 class="titulo">Trabajamos con</h3>
-            <p>
-              Lorem ipsum dolor sit amet consectetur adipisicing elit. Velit nam
-              error laborum ipsum. Nesciunt blanditiis illum necessitatibus
-              fugiat, laudantium cumque ratione veritatis ipsam dolorem nemo
-              excepturi laborum quod. Doloremque in ad voluptate similique quasi
-              eaque quisquam consequatur repudiandae, saepe, magni, molestias
-              neque sapiente dolores corporis recusandae distinctio dolore
-              tempora aut?
-            </p>
+    <main>
+      <section class="nosotros">
+        <div class="container py-5">
+          <div class="row justify-content-center scroll__faqs">
+            <div
+              class="col-12 text-center py-5"
+              data-aos="zoom-in-up"
+              data-aos-duration="1000"
+            >
+              <h2 class="subtitulo"><span>Devoluciones</span></h2>
+              <h3 class="titulo">Políticas de Devoluciones</h3>
+              <p>
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Velit
+                nam error laborum ipsum. Nesciunt blanditiis illum
+                necessitatibus fugiat, laudantium cumque ratione veritatis ipsam
+                dolorem nemo excepturi laborum quod. Doloremque in ad voluptate
+                similique quasi eaque quisquam consequatur repudiandae, saepe,
+                magni, molestias neque sapiente dolores corporis recusandae
+                distinctio dolore tempora aut?
+              </p>
+            </div>
+            <div
+              class="col-12 text-center py-5"
+              data-aos="zoom-in-up"
+              data-aos-duration="1000"
+            >
+              <h2 class="subtitulo"><span>Políticas de cambio</span></h2>
+              <h3 class="titulo">Para realizar cambios</h3>
+              <p>
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Velit
+                nam error laborum ipsum. Nesciunt blanditiis illum
+                necessitatibus fugiat, laudantium cumque ratione veritatis ipsam
+                dolorem nemo excepturi laborum quod. Doloremque in ad voluptate
+                similique quasi eaque quisquam consequatur repudiandae, saepe,
+                magni, molestias neque sapiente dolores corporis recusandae
+                distinctio dolore tempora aut?
+              </p>
+            </div>
+            <div
+              class="col-12 text-center py-5"
+              data-aos="zoom-in-up"
+              data-aos-duration="1000"
+            >
+              <h2 class="subtitulo"><span>¿Como comprar?</span></h2>
+              <h3 class="titulo">Podes comprar</h3>
+              <p>
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Velit
+                nam error laborum ipsum. Nesciunt blanditiis illum
+                necessitatibus fugiat, laudantium cumque ratione veritatis ipsam
+                dolorem nemo excepturi laborum quod. Doloremque in ad voluptate
+                similique quasi eaque quisquam consequatur repudiandae, saepe,
+                magni, molestias neque sapiente dolores corporis recusandae
+                distinctio dolore tempora aut?
+              </p>
+            </div>
+            <div
+              class="col-12 text-center py-5"
+              data-aos="zoom-in-up"
+              data-aos-duration="1000"
+            >
+              <h2 class="subtitulo"><span>Formas de pago</span></h2>
+              <h3 class="titulo">Trabajamos con estos medios de pagos</h3>
+              <p>
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Velit
+                nam error laborum ipsum. Nesciunt blanditiis illum
+                necessitatibus fugiat, laudantium cumque ratione veritatis ipsam
+                dolorem nemo excepturi laborum quod. Doloremque in ad voluptate
+                similique quasi eaque quisquam consequatur repudiandae, saepe,
+                magni, molestias neque sapiente dolores corporis recusandae
+                distinctio dolore tempora aut?
+              </p>
+            </div>
+            <div
+              class="col-12 text-center py-5"
+              data-aos="zoom-in-up"
+              data-aos-duration="1000"
+            >
+              <h2 class="subtitulo"><span>Costos de Envío</span></h2>
+              <h3 class="titulo">Trabajamos con</h3>
+              <p>
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Velit
+                nam error laborum ipsum. Nesciunt blanditiis illum
+                necessitatibus fugiat, laudantium cumque ratione veritatis ipsam
+                dolorem nemo excepturi laborum quod. Doloremque in ad voluptate
+                similique quasi eaque quisquam consequatur repudiandae, saepe,
+                magni, molestias neque sapiente dolores corporis recusandae
+                distinctio dolore tempora aut?
+              </p>
+            </div>
           </div>
         </div>
-      </div>
-    </section>
+      </section>
+    </main>
 
     <!--Footer-->
     <footer class="footer">
       <div class="container py-5">
         <div class="row">
           <div class="col-lg-9 m-auto text-center">
-            <h1>Recibí nuestras promociones</h1>
+            <h3 class="h1">Recibí nuestras promociones</h3>
             <input
               type="email"
               name="email"
