--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="description" content="Ecommerce de Bohemias donde encontrarás indumentaria y calzado femenino">
+    <meta name="keywords" content="Ecommerce, Mujer, Indumentaria, Calzado, Ropa, Moda, Remeras, Abrigos">
     <title>Bohemias Store</title>
     <!--Bootstrap-->
     <link
@@ -40,7 +42,7 @@
         data-aos-duration="1500"
       >
         <div class="container">
-          <a class="navbar-brand fs-1" href="index.html">Bohemias</a>
+          <h1><a class="navbar-brand fs-1" href="index.html">Bohemias</a></h1>
           <button
             class="navbar-toggler"
             type="button"
@@ -169,13 +171,13 @@
       </div>
       <!--Fin carrousel-->
 
-      <section class="sale">
+      <section class="sale remeras">
         <div
           class="container py-5"
           data-aos="fade-left"
           data-aos-duration="1500"
         >
-          <h1 class="text-center">On Sale</h1>
+          <h2 class="text-center">PRODUCTOS EN LIQUIDACIÓN</h2>
           <div class="row py-5">
             <div class="col-lg-3">
               <div class="card">
@@ -273,9 +275,9 @@
         <div class="container py-5 text-white text-center">
           <div class="row p-y3">
             <div class="col-lg-9 mx-auto">
-              <h1 class="visitanos__titulo">VISITANOS</h1>
+              <h3 class="visitanos__titulo">VISITANOS</h3>
               <p class="visitanos__subtitulo py-3">
-                Vení a visitarnos a nuestro Showroom
+                Vení a CONOCER nuestro Showroom
               </p>
               <button class="visitanos__btn btn1 mr-1">Conocer</button>
             </div>
@@ -318,9 +320,9 @@
       </section>
 
       <section class="criticas">
-        <h1 class="criticas__titulo text-center p-5">
+        <h2 class="criticas__titulo text-center p-5 h1">
           Nuestras <span>Clientas</span>
-        </h1>
+        </h2>
         <div
           class="criticas__contenedor"       
         >
@@ -462,7 +464,7 @@
       <div class="container py-5">
         <div class="row">
           <div class="col-lg-9 m-auto text-center">
-            <h1>Recibí nuestras promociones</h1>
+            <h3 class="h1">Recibí nuestras promociones</h3>
             <input
               type="email"
               name="email"
