--- a/abrigos.html
+++ b/abrigos.html
@@ -4,6 +4,14 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta
+      name="description"
+      content="Ecommerce de Bohemias, sección abrigos."
+    />
+    <meta
+      name="keywords"
+      content="Ecommerce, Mujer, Moda, Abrigos, Sweaters, Camperas"
+    />
     <title>Bohemias Store</title>
     <!--Bootstrap-->
     <link
@@ -13,7 +21,7 @@
       crossorigin="anonymous"
     />
     <!--Aos animate-->
-    <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
+    <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet" />
     <!--Mi CSS-->
     <link rel="stylesheet" href="style/css/styles.css" />
     <!--Google fonts-->
@@ -34,7 +42,7 @@
     <header>
       <nav class="navbar navbar-expand-lg">
         <div class="container">
-          <a class="navbar-brand fs-1" href="index.html">Bohemias</a>
+          <h1><a class="navbar-brand fs-1" href="index.html">Bohemias</a></h1>
           <button
             class="navbar-toggler"
             type="button"
@@ -74,218 +82,248 @@
         </div>
       </nav>
     </header>
-    <section class="descuentos remeras">
-      <h2 class="text-center">Ofertas por tiempo Limitado</h2>
-      <div class="descuentos__contenedor">
-        <div class="descuentos__contenedor__tarjeta">
-          <figure>
-            <img src="img/Abrigos/img para descuentos/foto1.jpg" class="frontal" alt="foto de una campera">
-            <figcaption class="trasera">
-              <h3>Descuentos de:</h3>
-              <hr>
-              <p class="h1">50%</p>
-              <p class="h3">40%</p>
-              <p class="h4">30%</p>
-            </figcaption>
-          </figure>
+    <main>
+      <section class="descuentos remeras">
+        <h2 class="text-center">Ofertas por tiempo Limitado</h2>
+        <div class="descuentos__contenedor">
+          <div class="descuentos__contenedor__tarjeta">
+            <figure>
+              <img
+                src="img/Abrigos/img para descuentos/foto1.jpg"
+                class="frontal"
+                alt="foto de una campera"
+              />
+              <figcaption class="trasera">
+                <h3>Descuentos de:</h3>
+                <hr />
+                <p class="h1">50%</p>
+                <p class="h3">40%</p>
+                <p class="h4">30%</p>
+              </figcaption>
+            </figure>
+          </div>
+          <div class="descuentos__contenedor__tarjeta">
+            <figure>
+              <img
+                src="img/Abrigos/img para descuentos/foto2.jpg"
+                class="frontal"
+                alt="foto de una campera"
+              />
+              <figcaption class="trasera">
+                <h3>Descuentos de:</h3>
+                <hr />
+                <p class="h1">50%</p>
+                <p class="h3">40%</p>
+                <p class="h4">30%</p>
+              </figcaption>
+            </figure>
+          </div>
+          <div class="descuentos__contenedor__tarjeta">
+            <figure>
+              <img
+                src="img/Abrigos/img para descuentos/foto3.jpg"
+                class="frontal"
+                alt="foto de una campera"
+              />
+              <figcaption class="trasera">
+                <h3>Descuentos de:</h3>
+                <hr />
+                <p class="h1">50%</p>
+                <p class="h3">40%</p>
+                <p class="h4">30%</p>
+              </figcaption>
+            </figure>
+          </div>
         </div>
-        <div class="descuentos__contenedor__tarjeta">
-          <figure>
-            <img src="img/Abrigos/img para descuentos/foto2.jpg" class="frontal" alt="foto de una campera">
-            <figcaption class="trasera">
-              <h3>Descuentos de:</h3>
-              <hr>
-              <p class="h1">50%</p>
-              <p class="h3">40%</p>
-              <p class="h4">30%</p>
-            </figcaption>
-          </figure>
-        </div>
-        <div class="descuentos__contenedor__tarjeta">
-          <figure>
-            <img src="img/Abrigos/img para descuentos/foto3.jpg" class="frontal" alt="foto de una campera">
-            <figcaption class="trasera">
-              <h3>Descuentos de:</h3>
-              <hr>
-              <p class="h1">50%</p>
-              <p class="h3">40%</p>
-              <p class="h4">30%</p>
-            </figcaption>
-          </figure>
-        </div>
-      </div>
-    </section>
+      </section>
 
-    <section class="remeras">
-      <div class="container py-5">
-        <h2 class="text-center">Nuestros Abrigos</h2>
-        <div class="row py-5">
-          <h3 class="text-center py-3">Abrigos que amamos</h3>
-          <div class="col-lg-3 remeras__card">
-            <img
-              src="img/Abrigos/buzo-bea.jpg"
-              alt="img de un buzo"
-              class="img-fluid"
-            />
-            <h4>Buzo Beatles</h4>
-            <span><i class="fa fa-star"></i></span>
-            <span><i class="fa fa-star"></i></span>
-            <span><i class="fa fa-star"></i></span>
-            <span><i class="fa fa-star"></i></span>
-            <span><i class="fa fa-star-o"></i></span>
-            <p>$1.999</p>
-            <button  data-aos="fade-right" data-aos-duration="2000"
-              onclick="location.href='productos.html'"
-            >
-              Ver
-            </button>
+      <section class="remeras">
+        <div class="container py-5">
+          <h2 class="text-center">Nuestros Abrigos</h2>
+          <div class="row py-5">
+            <h3 class="text-center py-3">Abrigos que amamos</h3>
+            <div class="col-lg-3 remeras__card">
+              <img
+                src="img/Abrigos/buzo-bea.jpg"
+                alt="img de un buzo"
+                class="img-fluid"
+              />
+              <h4>Buzo Beatles</h4>
+              <span><i class="fa fa-star"></i></span>
+              <span><i class="fa fa-star"></i></span>
+              <span><i class="fa fa-star"></i></span>
+              <span><i class="fa fa-star"></i></span>
+              <span><i class="fa fa-star-o"></i></span>
+              <p>$1.999</p>
+              <button
+                data-aos="fade-right"
+                data-aos-duration="2000"
+                onclick="location.href='productos.html'"
+              >
+                Ver
+              </button>
+            </div>
+            <div class="col-lg-3 remeras__card">
+              <img
+                src="img/Abrigos/buzo-cala.jpg"
+                alt="img de un buzo"
+                class="img-fluid"
+              />
+              <h4>Buzo cala</h4>
+              <span><i class="fa fa-star"></i></span>
+              <span><i class="fa fa-star"></i></span>
+              <span><i class="fa fa-star"></i></span>
+              <span><i class="fa fa-star"></i></span>
+              <span><i class="fa fa-star-o"></i></span>
+              <p>$1.999</p>
+              <button
+                data-aos="fade-right"
+                data-aos-duration="2400"
+                onclick="location.href='productos.html'"
+              >
+                Ver
+              </button>
+            </div>
+            <div class="col-lg-3 remeras__card">
+              <img
+                src="img/Abrigos/buzo-pinkf.jpg"
+                alt="img de un buzo"
+                class="img-fluid"
+              />
+              <h4>Buzo Pink Floyd</h4>
+              <span><i class="fa fa-star"></i></span>
+              <span><i class="fa fa-star"></i></span>
+              <span><i class="fa fa-star"></i></span>
+              <span><i class="fa fa-star"></i></span>
+              <span><i class="fa fa-star-o"></i></span>
+              <p>$1.999</p>
+              <button
+                data-aos="fade-right"
+                data-aos-duration="2800"
+                onclick="location.href='productos.html'"
+              >
+                Ver
+              </button>
+            </div>
+            <div class="col-lg-3 remeras__card">
+              <img
+                src="img/Abrigos/buzo-polaroid.jpg"
+                alt="img de un buzo"
+                class="img-fluid"
+              />
+              <h4>Buzo Polaroid</h4>
+              <span><i class="fa fa-star"></i></span>
+              <span><i class="fa fa-star"></i></span>
+              <span><i class="fa fa-star"></i></span>
+              <span><i class="fa fa-star"></i></span>
+              <span><i class="fa fa-star-o"></i></span>
+              <p>$1.999</p>
+              <button
+                data-aos="fade-right"
+                data-aos-duration="3000"
+                onclick="location.href='productos.html'"
+              >
+                Ver
+              </button>
+            </div>
           </div>
-          <div class="col-lg-3 remeras__card">
-            <img
-              src="img/Abrigos/buzo-cala.jpg"
-              alt="img de un buzo"
-              class="img-fluid"
-            />
-            <h4>Buzo cala</h4>
-            <span><i class="fa fa-star"></i></span>
-            <span><i class="fa fa-star"></i></span>
-            <span><i class="fa fa-star"></i></span>
-            <span><i class="fa fa-star"></i></span>
-            <span><i class="fa fa-star-o"></i></span>
-            <p>$1.999</p>
-            <button data-aos="fade-right" data-aos-duration="2400"
-              onclick="location.href='productos.html'"
-            >
-              Ver
-            </button>
-          </div>
-          <div class="col-lg-3 remeras__card">
-            <img
-              src="img/Abrigos/buzo-pinkf.jpg"
-              alt="img de un buzo"
-              class="img-fluid"
-            />
-            <h4>Buzo Pink Floyd</h4>
-            <span><i class="fa fa-star"></i></span>
-            <span><i class="fa fa-star"></i></span>
-            <span><i class="fa fa-star"></i></span>
-            <span><i class="fa fa-star"></i></span>
-            <span><i class="fa fa-star-o"></i></span>
-            <p>$1.999</p>
-            <button data-aos="fade-right" data-aos-duration="2800"
-              onclick="location.href='productos.html'"
-            >
-              Ver
-            </button>
-          </div>
-          <div class="col-lg-3 remeras__card">
-            <img
-              src="img/Abrigos/buzo-polaroid.jpg"
-              alt="img de un buzo"
-              class="img-fluid"
-            />
-            <h4>Buzo Polaroid</h4>
-            <span><i class="fa fa-star"></i></span>
-            <span><i class="fa fa-star"></i></span>
-            <span><i class="fa fa-star"></i></span>
-            <span><i class="fa fa-star"></i></span>
-            <span><i class="fa fa-star-o"></i></span>
-            <p>$1.999</p>
-            <button data-aos="fade-right" data-aos-duration="3000"
-              onclick="location.href='productos.html'"
-            >
-              Ver
-            </button>
+          <h2 class="text-center">Nuevos ingresos</h2>
+          <div class="row py-5">
+            <div class="col-lg-3 remeras__card">
+              <img
+                src="img/Abrigos/buzo-redhot.jpg"
+                alt="img de un buzo"
+                class="img-fluid"
+              />
+              <h4>Buzo Red Hot</h4>
+              <span><i class="fa fa-star"></i></span>
+              <span><i class="fa fa-star"></i></span>
+              <span><i class="fa fa-star"></i></span>
+              <span><i class="fa fa-star"></i></span>
+              <span><i class="fa fa-star-o"></i></span>
+              <p>$1.999</p>
+              <button
+                data-aos="fade-left"
+                data-aos-duration="2000"
+                onclick="location.href='productos.html'"
+              >
+                Ver
+              </button>
+            </div>
+            <div class="col-lg-3 remeras__card">
+              <img
+                src="img/Abrigos/campera-jean.jpg"
+                alt="img de un buzo"
+                class="img-fluid"
+              />
+              <h4>Campera Jean</h4>
+              <span><i class="fa fa-star"></i></span>
+              <span><i class="fa fa-star"></i></span>
+              <span><i class="fa fa-star"></i></span>
+              <span><i class="fa fa-star"></i></span>
+              <span><i class="fa fa-star-o"></i></span>
+              <p>$1.999</p>
+              <button
+                data-aos="fade-left"
+                data-aos-duration="2400"
+                onclick="location.href='productos.html'"
+              >
+                Ver
+              </button>
+            </div>
+            <div class="col-lg-3 remeras__card">
+              <img
+                src="img/Abrigos/foto1.jpg"
+                alt="img de un buzo"
+                class="img-fluid"
+              />
+              <h4>Sweater</h4>
+              <span><i class="fa fa-star"></i></span>
+              <span><i class="fa fa-star"></i></span>
+              <span><i class="fa fa-star"></i></span>
+              <span><i class="fa fa-star"></i></span>
+              <span><i class="fa fa-star-o"></i></span>
+              <p>$1.999</p>
+              <button
+                data-aos="fade-left"
+                data-aos-duration="2800"
+                onclick="location.href='productos.html'"
+              >
+                Ver
+              </button>
+            </div>
+            <div class="col-lg-3 remeras__card">
+              <img
+                src="img/Abrigos/foto2.jpg"
+                alt="img de un buzo"
+                class="img-fluid"
+              />
+              <h4>Campera de Cuero</h4>
+              <span><i class="fa fa-star"></i></span>
+              <span><i class="fa fa-star"></i></span>
+              <span><i class="fa fa-star"></i></span>
+              <span><i class="fa fa-star"></i></span>
+              <span><i class="fa fa-star-o"></i></span>
+              <p>$1.999</p>
+              <button
+                data-aos="fade-left"
+                data-aos-duration="3000"
+                onclick="location.href='productos.html'"
+              >
+                Ver
+              </button>
+            </div>
           </div>
         </div>
-        <h2 class="text-center">Nuevos ingresos</h2>
-        <div class="row py-5">
-          <div class="col-lg-3 remeras__card">
-            <img
-              src="img/Abrigos/buzo-redhot.jpg"
-              alt="img de un buzo"
-              class="img-fluid"
-            />
-            <h4>Buzo Red Hot</h4>
-            <span><i class="fa fa-star"></i></span>
-            <span><i class="fa fa-star"></i></span>
-            <span><i class="fa fa-star"></i></span>
-            <span><i class="fa fa-star"></i></span>
-            <span><i class="fa fa-star-o"></i></span>
-            <p>$1.999</p>
-            <button data-aos="fade-left" data-aos-duration="2000" 
-              onclick="location.href='productos.html'"
-            >
-              Ver
-            </button>
-          </div>
-          <div class="col-lg-3 remeras__card">
-            <img
-              src="img/Abrigos/campera-jean.jpg"
-              alt="img de un buzo"
-              class="img-fluid"
-            />
-            <h4>Campera Jean</h4>
-            <span><i class="fa fa-star"></i></span>
-            <span><i class="fa fa-star"></i></span>
-            <span><i class="fa fa-star"></i></span>
-            <span><i class="fa fa-star"></i></span>
-            <span><i class="fa fa-star-o"></i></span>
-            <p>$1.999</p>
-            <button data-aos="fade-left" data-aos-duration="2400" 
-              onclick="location.href='productos.html'"
-            >
-              Ver
-            </button>
-          </div>
-          <div class="col-lg-3 remeras__card">
-            <img
-              src="img/Abrigos/foto1.jpg"
-              alt="img de un buzo"
-              class="img-fluid"
-            />
-            <h4>Sweater</h4>
-            <span><i class="fa fa-star"></i></span>
-            <span><i class="fa fa-star"></i></span>
-            <span><i class="fa fa-star"></i></span>
-            <span><i class="fa fa-star"></i></span>
-            <span><i class="fa fa-star-o"></i></span>
-            <p>$1.999</p>
-            <button data-aos="fade-left" data-aos-duration="2800" 
-              onclick="location.href='productos.html'"
-            >
-              Ver
-            </button>
-          </div>
-          <div class="col-lg-3 remeras__card">
-            <img
-              src="img/Abrigos/foto2.jpg"
-              alt="img de un buzo"
-              class="img-fluid"
-            />
-            <h4>Campera de Cuero</h4>
-            <span><i class="fa fa-star"></i></span>
-            <span><i class="fa fa-star"></i></span>
-            <span><i class="fa fa-star"></i></span>
-            <span><i class="fa fa-star"></i></span>
-            <span><i class="fa fa-star-o"></i></span>
-            <p>$1.999</p>
-            <button data-aos="fade-left" data-aos-duration="3000" 
-              onclick="location.href='productos.html'"
-            >
-              Ver
-            </button>
-          </div>
-        </div>
-      </div>
-    </section>
+      </section>
+    </main>
 
     <!--Footer-->
     <footer class="footer">
       <div class="container py-5">
         <div class="row">
           <div class="col-lg-9 m-auto text-center">
-            <h1>Recibí nuestras promociones</h1>
+            <h3 class="h1">Recibí nuestras promociones</h3>
             <input
               type="email"
               name="email"
