--- a/jeans.html
+++ b/jeans.html
@@ -4,6 +4,11 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="keywords" content="Ecommerce Bohemias, sección Jeans" />
+    <meta
+      name="keywords"
+      content="Ecommerce, Bohemias, Jeans, Skinny, Sastrero"
+    />
     <title>Bohemias Store</title>
     <!--Bootstrap-->
     <link
@@ -13,7 +18,7 @@
       crossorigin="anonymous"
     />
     <!--Aos animate-->
-    <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
+    <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet" />
     <!--Mi CSS-->
     <link rel="stylesheet" href="style/css/styles.css" />
     <!--Google fonts-->
@@ -65,7 +70,9 @@
         <header>
           <nav class="navbar navbar-expand-lg">
             <div class="container">
-              <a class="navbar-brand fs-1" href="index.html">Bohemias</a>
+              <h1>
+                <a class="navbar-brand fs-1" href="index.html">Bohemias</a>
+              </h1>
               <button
                 class="navbar-toggler"
                 type="button"
@@ -111,9 +118,21 @@
             <div class="container hero__jeans">
               <div class="row">
                 <div class="col-lg-7 text-center p-5">
-                  <h2 class="hero__jeans__titulo" data-aos="zoom-out" data-aos-duration="500">AMAMOS</h2>
+                  <h2
+                    class="hero__jeans__titulo"
+                    data-aos="zoom-out"
+                    data-aos-duration="500"
+                  >
+                    AMAMOS
+                  </h2>
                   <br />
-                  <h1 class="hero__jeans__subtitulo m-5" data-aos="zoom-out" data-aos-duration="3000">LOS JEANS</h1>
+                  <h1
+                    class="hero__jeans__subtitulo m-5"
+                    data-aos="zoom-out"
+                    data-aos-duration="3000"
+                  >
+                    LOS JEANS
+                  </h1>
                 </div>
               </div>
             </div>
@@ -241,7 +260,7 @@
           <div class="container py-5">
             <div class="row">
               <div class="col-lg-9 m-auto text-center">
-                <h1>Recibí nuestras promociones</h1>
+                <h3 class="h1">Recibí nuestras promociones</h3>
                 <input
                   type="email"
                   name="email"
@@ -342,22 +361,22 @@
             </div>
           </div>
         </footer>
-    <!--Aos animate-->
-    <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
-    <script>
-      AOS.init();
-    </script>
-    <!--Bootstrap-->
-    <script
-      src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.0/dist/js/bootstrap.bundle.min.js"
-      integrity="sha384-U1DAWAznBHeqEIlVSCgzq+c9gqGAJn5c/t99JyeKa9xxaYpSvHU5awsuZVVFIhvj"
-      crossorigin="anonymous"
-    ></script>
-    <!--Font Awesome-->
-    <script
-      src="https://kit.fontawesome.com/7d4193cf05.js"
-      crossorigin="anonymous"
-    ></script>
+        <!--Aos animate-->
+        <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
+        <script>
+          AOS.init();
+        </script>
+        <!--Bootstrap-->
+        <script
+          src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.0/dist/js/bootstrap.bundle.min.js"
+          integrity="sha384-U1DAWAznBHeqEIlVSCgzq+c9gqGAJn5c/t99JyeKa9xxaYpSvHU5awsuZVVFIhvj"
+          crossorigin="anonymous"
+        ></script>
+        <!--Font Awesome-->
+        <script
+          src="https://kit.fontawesome.com/7d4193cf05.js"
+          crossorigin="anonymous"
+        ></script>
       </body>
     </html>
   </body>
