--- a/nosotras.html
+++ b/nosotras.html
@@ -4,6 +4,11 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta
+      name="description"
+      content="Ecommerce Bohemias, sección Nosotras donde narramos nuestra historia"
+    />
+    <meta name="keywords" content="Ecommerce, Bohemias, Historia, Nosotras." />
     <title>Bohemias Store</title>
     <!--Bootstrap-->
     <link
@@ -35,7 +40,7 @@
     <header>
       <nav class="navbar navbar-expand-lg">
         <div class="container">
-          <a class="navbar-brand fs-1" href="index.html">Bohemias</a>
+          <h1><a class="navbar-brand fs-1" href="index.html">Bohemias</a></h1>
           <button
             class="navbar-toggler"
             type="button"
@@ -99,7 +104,11 @@
               </div>
               <div class="col-lg-6">
                 <h2>¿COMO EMPEZÓ TODO?</h2>
-                <p data-aos="zoom-in-down" data-aos-delay="600" data-aos-duration="1000">
+                <p
+                  data-aos="zoom-in-down"
+                  data-aos-delay="600"
+                  data-aos-duration="1000"
+                >
                   Lorem ipsum dolor sit, amet consectetur adipisicing elit.
                   Sapiente, eum. Adipisci delectus laboriosam quod! Repudiandae
                   doloremque saepe aut ullam excepturi est repellat quam itaque
@@ -183,7 +192,7 @@
       <div class="container py-5">
         <div class="row">
           <div class="col-lg-9 m-auto text-center">
-            <h1>Recibí nuestras promociones</h1>
+            <h3 class="h1">Recibí nuestras promociones</h3>
             <input
               type="email"
               name="email"
@@ -293,6 +302,6 @@
     <script
       src="https://kit.fontawesome.com/7d4193cf05.js"
       crossorigin="anonymous"
-    ></script>    
+    ></script>
   </body>
 </html>
