--- a/productos.html
+++ b/productos.html
@@ -4,6 +4,8 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="description" content="Ecommerce de Bohemias, sección carrito de compras.">
+    <meta name="keywords" content="Ecommerce, Bohemias, Carro de compra, Compra, pagos.">
     <title>Bohemias Store</title>
     <!--Bootstrap-->
     <link
@@ -40,7 +42,7 @@
         data-aos-duration="1500"
       >
         <div class="container">
-          <a class="navbar-brand fs-1" href="index.html">Bohemias</a>
+          <h1><a class="navbar-brand fs-1" href="index.html">Bohemias</a></h1>
           <button
             class="navbar-toggler"
             type="button"
@@ -203,8 +205,7 @@
                 Ver
               </button>
             </div>
-          </div>
-  
+          </div>  
     </main>
 
     <!--Footer-->
@@ -212,7 +213,7 @@
       <div class="container py-5">
         <div class="row">
           <div class="col-lg-9 m-auto text-center">
-            <h1>Recibí nuestras promociones</h1>
+            <h3 class="h1">Recibí nuestras promociones</h3>
             <input
               type="email"
               name="email"
