--- a/zapatos.html
+++ b/zapatos.html
@@ -4,6 +4,14 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta
+      name="keywords"
+      content="Ecommerce de Bohemias, sección Zapatos. Donde encontraras las últimas novedades de Calzados"
+    />
+    <meta
+      name="keywords"
+      content="Ecommerce, Bohemias, Zapatos, Calzados, Zapatillas."
+    />
     <title>Bohemias Store</title>
     <!--Bootstrap-->
     <link
@@ -13,7 +21,7 @@
       crossorigin="anonymous"
     />
     <!--Aos animate-->
-    <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
+    <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet" />
     <!--Mi CSS-->
     <link rel="stylesheet" href="style/css/styles.css" />
     <!--Google fonts-->
@@ -34,7 +42,7 @@
     <header>
       <nav class="navbar navbar-expand-lg">
         <div class="container">
-          <a class="navbar-brand fs-1" href="index.html">Bohemias</a>
+          <h1><a class="navbar-brand fs-1" href="index.html">Bohemias</a></h1>
           <button
             class="navbar-toggler"
             type="button"
@@ -75,142 +83,193 @@
       </nav>
     </header>
 
-    <section class="remeras">
-      <div class="container py-5">
-        <h2 class="text-center">Zapatillas</h2>
-        <div class="row py-5">
-          <div class="col-lg-3 remeras__card">
-            <img
-              src="img/Zapatos/foto1.jpg"
-              alt="img de calzado"
-              class="img-fluid"
-            />
-            <h4>Zapas</h4>
-            <span><i class="fa fa-star"></i></span>
-            <span><i class="fa fa-star"></i></span>
-            <span><i class="fa fa-star"></i></span>
-            <span><i class="fa fa-star"></i></span>
-            <span><i class="fa fa-star-o"></i></span>
-            <p>$1.999</p>
-            <button data-aos="fade-right" data-aos-duration="2000" onclick="location.href='productos.html'">Ver</button>
+    <main>
+      <section class="remeras">
+        <div class="container py-5">
+          <h2 class="text-center">Zapatillas</h2>
+          <div class="row py-5">
+            <div class="col-lg-3 remeras__card">
+              <img
+                src="img/Zapatos/foto1.jpg"
+                alt="img de calzado"
+                class="img-fluid"
+              />
+              <h4>Zapas</h4>
+              <span><i class="fa fa-star"></i></span>
+              <span><i class="fa fa-star"></i></span>
+              <span><i class="fa fa-star"></i></span>
+              <span><i class="fa fa-star"></i></span>
+              <span><i class="fa fa-star-o"></i></span>
+              <p>$1.999</p>
+              <button
+                data-aos="fade-right"
+                data-aos-duration="2000"
+                onclick="location.href='productos.html'"
+              >
+                Ver
+              </button>
+            </div>
+            <div class="col-lg-3 remeras__card">
+              <img
+                src="img/Zapatos/foto10.jpg"
+                alt="img de calzado"
+                class="img-fluid"
+              />
+              <h4>Zapas</h4>
+              <span><i class="fa fa-star"></i></span>
+              <span><i class="fa fa-star"></i></span>
+              <span><i class="fa fa-star"></i></span>
+              <span><i class="fa fa-star"></i></span>
+              <span><i class="fa fa-star-o"></i></span>
+              <p>$1.999</p>
+              <button
+                data-aos="fade-right"
+                data-aos-duration="2400"
+                onclick="location.href='productos.html'"
+              >
+                Ver
+              </button>
+            </div>
+            <div class="col-lg-3 remeras__card">
+              <img
+                src="img/Zapatos/foto11.jpg"
+                alt="img de calzado"
+                class="img-fluid"
+              />
+              <h4>Zapas</h4>
+              <span><i class="fa fa-star"></i></span>
+              <span><i class="fa fa-star"></i></span>
+              <span><i class="fa fa-star"></i></span>
+              <span><i class="fa fa-star"></i></span>
+              <span><i class="fa fa-star-o"></i></span>
+              <p>$1.999</p>
+              <button
+                data-aos="fade-right"
+                data-aos-duration="2800"
+                onclick="location.href='productos.html'"
+              >
+                Ver
+              </button>
+            </div>
+            <div class="col-lg-3 remeras__card">
+              <img
+                src="img/Zapatos/foto13.jpg"
+                alt="img de calzado"
+                class="img-fluid"
+              />
+              <h4>Zapas</h4>
+              <span><i class="fa fa-star"></i></span>
+              <span><i class="fa fa-star"></i></span>
+              <span><i class="fa fa-star"></i></span>
+              <span><i class="fa fa-star"></i></span>
+              <span><i class="fa fa-star-o"></i></span>
+              <p>$1.999</p>
+              <button
+                data-aos="fade-right"
+                data-aos-duration="3000"
+                onclick="location.href='productos.html'"
+              >
+                Ver
+              </button>
+            </div>
           </div>
-          <div class="col-lg-3 remeras__card">
-            <img
-              src="img/Zapatos/foto10.jpg"
-              alt="img de calzado"
-              class="img-fluid"
-            />
-            <h4>Zapas</h4>
-            <span><i class="fa fa-star"></i></span>
-            <span><i class="fa fa-star"></i></span>
-            <span><i class="fa fa-star"></i></span>
-            <span><i class="fa fa-star"></i></span>
-            <span><i class="fa fa-star-o"></i></span>
-            <p>$1.999</p>
-            <button data-aos="fade-right" data-aos-duration="2400" onclick="location.href='productos.html'">Ver</button>
-          </div>
-          <div class="col-lg-3 remeras__card">
-            <img
-              src="img/Zapatos/foto11.jpg"
-              alt="img de calzado"
-              class="img-fluid"
-            />
-            <h4>Zapas</h4>
-            <span><i class="fa fa-star"></i></span>
-            <span><i class="fa fa-star"></i></span>
-            <span><i class="fa fa-star"></i></span>
-            <span><i class="fa fa-star"></i></span>
-            <span><i class="fa fa-star-o"></i></span>
-            <p>$1.999</p>
-            <button data-aos="fade-right" data-aos-duration="2800" onclick="location.href='productos.html'">Ver</button>
-          </div>
-          <div class="col-lg-3 remeras__card">
-            <img
-              src="img/Zapatos/foto13.jpg"
-              alt="img de calzado"
-              class="img-fluid"
-            />
-            <h4>Zapas</h4>
-            <span><i class="fa fa-star"></i></span>
-            <span><i class="fa fa-star"></i></span>
-            <span><i class="fa fa-star"></i></span>
-            <span><i class="fa fa-star"></i></span>
-            <span><i class="fa fa-star-o"></i></span>
-            <p>$1.999</p>
-            <button data-aos="fade-right" data-aos-duration="3000" onclick="location.href='productos.html'">Ver</button>
+          <h2 class="text-center">Nuevos ingresos</h2>
+          <div class="row py-5">
+            <div class="col-lg-3 remeras__card">
+              <img
+                src="img/Zapatos/foto2.jpg"
+                alt="img de calzado"
+                class="img-fluid"
+              />
+              <h4>Zapas</h4>
+              <span><i class="fa fa-star"></i></span>
+              <span><i class="fa fa-star"></i></span>
+              <span><i class="fa fa-star"></i></span>
+              <span><i class="fa fa-star"></i></span>
+              <span><i class="fa fa-star-o"></i></span>
+              <p>$1.999</p>
+              <button
+                data-aos="fade-left"
+                data-aos-duration="2000"
+                onclick="location.href='productos.html'"
+              >
+                Ver
+              </button>
+            </div>
+            <div class="col-lg-3 remeras__card">
+              <img
+                src="img/Zapatos/foto4.jpg"
+                alt="img de calzado"
+                class="img-fluid"
+              />
+              <h4>Remeras</h4>
+              <span><i class="fa fa-star"></i></span>
+              <span><i class="fa fa-star"></i></span>
+              <span><i class="fa fa-star"></i></span>
+              <span><i class="fa fa-star"></i></span>
+              <span><i class="fa fa-star-o"></i></span>
+              <p>$1.999</p>
+              <button
+                data-aos="fade-left"
+                data-aos-duration="2400"
+                onclick="location.href='productos.html'"
+              >
+                Ver
+              </button>
+            </div>
+            <div class="col-lg-3 remeras__card">
+              <img
+                src="img/Zapatos/foto7.jpg"
+                alt="img de calzado"
+                class="img-fluid"
+              />
+              <h4>Zapas</h4>
+              <span><i class="fa fa-star"></i></span>
+              <span><i class="fa fa-star"></i></span>
+              <span><i class="fa fa-star"></i></span>
+              <span><i class="fa fa-star"></i></span>
+              <span><i class="fa fa-star-o"></i></span>
+              <p>$1.999</p>
+              <button
+                data-aos="fade-left"
+                data-aos-duration="2800"
+                onclick="location.href='productos.html'"
+              >
+                Ver
+              </button>
+            </div>
+            <div class="col-lg-3 remeras__card">
+              <img
+                src="img/Zapatos/foto8.jpg"
+                alt="img de calzado"
+                class="img-fluid"
+              />
+              <h4>Zapas</h4>
+              <span><i class="fa fa-star"></i></span>
+              <span><i class="fa fa-star"></i></span>
+              <span><i class="fa fa-star"></i></span>
+              <span><i class="fa fa-star"></i></span>
+              <span><i class="fa fa-star-o"></i></span>
+              <p>$1.999</p>
+              <button
+                data-aos="fade-left"
+                data-aos-duration="3000"
+                onclick="location.href='productos.html'"
+              >
+                Ver
+              </button>
+            </div>
           </div>
         </div>
-        <h2 class="text-center">Nuevos ingresos</h2>
-        <div class="row py-5">
-          <div class="col-lg-3 remeras__card">
-            <img
-              src="img/Zapatos/foto2.jpg"
-              alt="img de calzado"
-              class="img-fluid"
-            />
-            <h4>Zapas</h4>
-            <span><i class="fa fa-star"></i></span>
-            <span><i class="fa fa-star"></i></span>
-            <span><i class="fa fa-star"></i></span>
-            <span><i class="fa fa-star"></i></span>
-            <span><i class="fa fa-star-o"></i></span>
-            <p>$1.999</p>
-            <button data-aos="fade-left" data-aos-duration="2000"  onclick="location.href='productos.html'">Ver</button>
-          </div>
-          <div class="col-lg-3 remeras__card">
-            <img
-              src="img/Zapatos/foto4.jpg"
-              alt="img de calzado"
-              class="img-fluid"
-            />
-            <h4>Remeras</h4>
-            <span><i class="fa fa-star"></i></span>
-            <span><i class="fa fa-star"></i></span>
-            <span><i class="fa fa-star"></i></span>
-            <span><i class="fa fa-star"></i></span>
-            <span><i class="fa fa-star-o"></i></span>
-            <p>$1.999</p>
-            <button data-aos="fade-left" data-aos-duration="2400" onclick="location.href='productos.html'">Ver</button>
-          </div>
-          <div class="col-lg-3 remeras__card">
-            <img
-              src="img/Zapatos/foto7.jpg"
-              alt="img de calzado"
-              class="img-fluid"
-            />
-            <h4>Zapas</h4>
-            <span><i class="fa fa-star"></i></span>
-            <span><i class="fa fa-star"></i></span>
-            <span><i class="fa fa-star"></i></span>
-            <span><i class="fa fa-star"></i></span>
-            <span><i class="fa fa-star-o"></i></span>
-            <p>$1.999</p>
-            <button data-aos="fade-left" data-aos-duration="2800"  onclick="location.href='productos.html'">Ver</button>
-          </div>
-          <div class="col-lg-3 remeras__card">
-            <img
-              src="img/Zapatos/foto8.jpg"
-              alt="img de calzado"
-              class="img-fluid"
-            />
-            <h4>Zapas</h4>
-            <span><i class="fa fa-star"></i></span>
-            <span><i class="fa fa-star"></i></span>
-            <span><i class="fa fa-star"></i></span>
-            <span><i class="fa fa-star"></i></span>
-            <span><i class="fa fa-star-o"></i></span>
-            <p>$1.999</p>
-            <button data-aos="fade-left" data-aos-duration="3000" onclick="location.href='productos.html'">Ver</button>
-          </div>
-        </div>
-      </div>
-    </section>
+      </section>
+    </main>
+
     <!--Footer-->
     <footer class="footer">
       <div class="container py-5">
         <div class="row">
           <div class="col-lg-9 m-auto text-center">
-            <h1>Recibí nuestras promociones</h1>
+            <h3 class="h1">Recibí nuestras promociones</h3>
             <input
               type="email"
               name="email"
